# virtdb-apps

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.Apache-2.0  LICENSE.LGPL-v3  LICENSE.proto-files  LICENSE.sampledata  README.md  apps.gyp  bootstrap.sh  build.sh  filedir.sh  libdir.sh  main.gyp  pull.sh  start-config-service.sh  start-csv-provider.sh  start-diag-service.sh
cmake/: DefaultCompilerFlags.cmake  DetectGcc.cmake  DetectGnuTLS.cmake  DetectOpenSSL.cmake  FindCheckIconv.cmake  FindDlopen.cmake  FindICU.cmake  FindLibZMQ.cmake  FindPostgres.cmake  FindProtocolBuffers.cmake  NodeExternal.cmake  PrintVars.cmake  SetupPostgresCompilerFlags.cmake  SetupPostgresLinkerFlags.cmake  UseBoost.cmake
sample/: config.coffee  config_client_sample.cc  csvDataSource.coffee  dataService.coffee  dataprovider_client_sample.cc  diag_client_sample.cc  diag_svc_sample.cc  fieldData.coffee  gulpfile.js  log_server_sample.cc  logger.coffee  metaDataClient.coffee  metaDataService.coffee  meta_data_svc_sample.cc  protocol.coffee  svc_config_svc_sample.cc
sample/csv-provider/: config.coffee  csvDataSource.coffee  dataService.coffee  diag.coffee  fieldData.coffee  fieldTypeDetector.coffee  gulpfile.js  index.coffee  logger.coffee  metaDataService.coffee  package.json  protocol.coffee  virtdb.coffee
sample/csv-provider/data/: LICENSE
sample/csv-provider/test/: fieldTypeDetectorTest.coffee
sample/dummy-provider/: gulpfile.js  index.coffee  package.json
sample/meta-client/: gulpfile.js  metaDataClient.coffee  package.json  virtdb.coffee
src/: CMakeLists.txt  common.proto  discovery.cc  discovery.hh  dummy_metadata_service.cc  meta_data.proto  testme.cc
src/app/: CMakeLists.txt
src/app/dummy_svc/: CMakeLists.txt  binding.gyp  dummy_svc.cc  package.json  run.js
src/app/pg_svc/: CMakeLists.txt
src/common/: CMakeLists.txt
src/config-service/: main.cc
src/db-config/: config.coffee  index.coffee  package.json  protocol.coffee
src/diag-service/: main.cc
src/dump-table/: main.cc
src/greenplum-config/: Dockerfile  build-pgconfig.sh  build.sh  config.coffee  configurator.coffee  greenplum-configurator.coffee  gulpfile.js  index.coffee  package.json  postgres-configurator.coffee  postgres-connection.coffee  protocol.coffee  start-build.sh
src/greenplum-config/test/: gp-configurator-test.coffee  pg-configurator-test.coffee  pg-connection-test.coffee  pg-mock.coffee
src/interface/: CMakeLists.txt
src/interface/common/: CMakeLists.txt  common.proto
src/interface/conn_config/: CMakeLists.txt  conn_config.proto
src/interface/data/: CMakeLists.txt  data.proto
src/interface/db_config/: CMakeLists.txt  db_config.proto
src/interface/meta_data/: CMakeLists.txt  meta_data.proto
src/load-config/: main.cc
src/load-endpoint/: main.cc
src/postgres-config/: coffeelint.json  config.coffee  configurator.coffee  gulpfile.js  index.coffee  package.json  protocol.coffee
src/remove-endpoint/: main.cc
src/save-config/: main.cc
src/save-configs/: main.cc
src/save-endpoints/: main.cc
src/service/common/: base.hh  config.hh  data.hh  db_config.hh
src/service/dummy_data/: CMakeLists.txt
src/services/: CMakeLists.txt
src/services/common/: CMakeLists.txt
src/services/dummy_conn_config/: CMakeLists.txt
src/services/dummy_db_config/: CMakeLists.txt
src/services/dummy_meta_data/: CMakeLists.txt
src/services/pg_db_config/: CMakeLists.txt
src/simple-cache/: main.cc  query_data.cc  query_data.hh
src/testdata-provider/: main.cc
src/testdata-service/: main.cc
test/: CMakeLists.txt  Cpp11_gtest.cc  KeyValue_gtest.cc
