MESSAGE(STATUS "cmake configure src/interface/common/...")

ADD_CUSTOM_COMMAND(
  OUTPUT ${CMAKE_CURRENT_SOURCE_DIR}/common.pb.cc ${CMAKE_CURRENT_SOURCE_DIR}/common.pb.h
  PRE_BUILD
  COMMAND ${PB_COMPILER}
  ARGS --cpp_out=${CMAKE_CURRENT_SOURCE_DIR}/ -I${CMAKE_CURRENT_SOURCE_DIR}/ ${CMAKE_CURRENT_SOURCE_DIR}/common.proto
  MAIN_DEPENDENCY ${CMAKE_CURRENT_SOURCE_DIR}/common.proto
  WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/
  )

SET(
  INTERFACE_META_DATA_SOURCES
  common.pb.cc
  )

ADD_LIBRARY(
  interface_common_obj
  OBJECT
  ${INTERFACE_META_DATA_SOURCES}
  )

ADD_LIBRARY(
  interface_common
  STATIC
  $<TARGET_OBJECTS:interface_common_obj>
  )

# SUBDIRS( xxx )

